--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,7 +46,8 @@
     ]
   },
   "engines": {
-    "node": ">=18 <=20"
+    "node": "18.x",
+    "npm": ">=8"
   },
   "proxy": "http://localhost:8000"
 }
