--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,5 @@
 {
   "buildCommand": "cd frontend && npm run build",
   "outputDirectory": "frontend/build",
-  "framework": null,
-  "installCommand": "cd frontend && npm install --legacy-peer-deps",
-  "nodeVersion": "18"
+  "installCommand": "cd frontend && npm install --legacy-peer-deps"
 }
