--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   },
   "scripts": {
     "build": "cd frontend && npm run build"
+  },
+  "dependencies": {
+    "@splinetool/react-spline": "^4.1.0"
   }
 }
