--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,8 @@
     "@mdx-js/react": "^3.0.0",
     "@react-three/drei": "^9.120.0",
     "@react-three/fiber": "^8.17.0",
+    "@splinetool/react-spline": "^4.1.0",
+    "@splinetool/runtime": "^1.12.28",
     "clsx": "^2.0.0",
     "prism-react-renderer": "^2.3.0",
     "puppeteer": "^24.32.1",
@@ -49,7 +51,7 @@
     ]
   },
   "engines": {
-    "node": "18.x",
+    "node": "24.x",
     "npm": ">=10"
   },
   "proxy": "http://localhost:8000"
