--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,15 +1,20 @@
-FROM python:3.10-slim
+# Use official Python slim image (matches your runtime.txt: 3.12)
+FROM python:3.12-slim
 
+# Set workdir
 WORKDIR /app
 
-ENV PYTHONDONTWRITEBYTECODE=1
-ENV PYTHONUNBUFFERED=1
-
+# Copy requirements first (for better caching)
 COPY requirements.txt .
+
+# Install deps with pip (no mise/UV involved)
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Copy app code
 COPY . .
 
-EXPOSE 7860
+# Expose port (Railway uses $PORT)
+EXPOSE 8000
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "7860"]
+# Run with uvicorn (matches your code)
+CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
