--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
-    "build": "next build",
+    "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
@@ -52,10 +52,10 @@
   },
   "engines": {
     "node": "24.x",
-    "npm": ">=10",
-    "pnpm": "^7.5.1"
-  },
-    "packageManager": "pnpm@7.5.1",
-  "proxy": "http://localhost:8000"
+    "npm": ">=10"
+   
+  }
+    
+
 }
 
