--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,7 +6,7 @@ beautifulsoup4>=4.12.0
 cohere>=4.9.0
 qdrant-client>=1.8.0
 python-dotenv>=1.0.0
-transformers>=4.35.0
+# transformers>=4.35.0
 pytest>=7.4.0
 numpy>=1.24.0
 google-generativeai>=0.4.0
