--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,8 @@
 fastapi>=0.104.1
 pydantic>=2.5.0
+uvicorn>=0.18.0
 requests>=2.31.0
 cohere>=4.9.0
 qdrant-client>=1.8.0
 python-dotenv>=1.0.0
-google-generativeai>=0.4.0
+google-generativeai>=0.6.0
